--- a/ProjectManagementSystem/Views/User/Index.cshtml
+++ b/ProjectManagementSystem/Views/User/Index.cshtml
@@ -1,80 +1,62 @@
-﻿@model IEnumerable< ApplicationUser>
-
+﻿@model IEnumerable<ApplicationUser>
+@using Microsoft.AspNetCore.Identity;
+@inject RoleManager<IdentityRole> roleManager;
+@inject UserManager<ApplicationUser> userManager;
 @{
-	ViewBag.Title = "用户列表";
+    ViewBag.Title = "用户列表";
 }
 
 
+<section class="section">
+    <div class="row">
+        <div class="col-lg-12">
 
-<main id="main" class="main">
-	<section class="section">
-		<div class="row">
-			<div class="col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title">用户信息</h2>
 
-				<div class="card">
-					<div class="card-body">
-						<h5 class="card-title">Datatables</h5>
-						<p>Add lightweight datatables to your project with using the <a href="https://github.com/fiduswriter/Simple-DataTables" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable</p>
+                    <!-- Table with stripped rows -->
+                    <table id="mytable" class="table datatable">
+                        <thead>
+                            <tr>
+                                <th scope="col">用户名</th>
+                                <th scope="col">姓名</th>
+                                <th scope="col">部门</th>
+                                <th scope="col">职位</th>
+                                <th scope="col">角色</th>
+                                <th scope="col">操作</th> <!-- 添加新的表头单元格 -->
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                @foreach (var user in Model)
+                                {
+                                    var roleNames = await userManager.GetRolesAsync(user);
+                                    var roleName = roleNames == null || roleNames.Count == 0 ? "" : roleNames.First();
+                                    <td>@user.UserName</td>
+                                    <td>@user.TrueName</td>
+                                    <td>@user.Department</td>
+                                    <td>@user.Job</td>
+                                    <td>@roleName</td>
+                                    <td>
+                                        <row>
+                                            <a asp-action="EditUser" asp-route-id="@user.Id" class="btn btn-outline-primary">编辑</a>
+                                            <a asp-action="DeleteUser" asp-route-id="@user.Id" class="btn btn-outline-danger">删除</a>
+                                        </row>
+                                    </td> <!-- 在每一行的最后一个单元格中添加按钮代码 -->
+                                }
+                            </tr>
+                        </tbody>
+                    </table>
 
-						<!-- Table with stripped rows -->
-						<table class="table datatable">
-							<thead>
-								<tr>
-									<th scope="col">#</th>
-									<th scope="col">Name</th>
-									<th scope="col">Position</th>
-									<th scope="col">Age</th>
-									<th scope="col">Start Date</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<th scope="row">1</th>
-									<td>Brandon Jacob</td>
-									<td>Designer</td>
-									<td>28</td>
-									<td>2016-05-25</td>
-								</tr>
-								<tr>
-									<th scope="row">2</th>
-									<td>Bridie Kessler</td>
-									<td>Developer</td>
-									<td>35</td>
-									<td>2014-12-05</td>
-								</tr>
-								<tr>
-									<th scope="row">3</th>
-									<td>Ashleigh Langosh</td>
-									<td>Finance</td>
-									<td>45</td>
-									<td>2011-08-12</td>
-								</tr>
-								<tr>
-									<th scope="row">4</th>
-									<td>Angus Grady</td>
-									<td>HR</td>
-									<td>34</td>
-									<td>2012-06-11</td>
-								</tr>
-								<tr>
-									<th scope="row">5</th>
-									<td>Raheem Lehner</td>
-									<td>Dynamic Division Officer</td>
-									<td>47</td>
-									<td>2011-04-19</td>
-								</tr>
-							</tbody>
-						</table>
-						<!-- End Table with stripped rows -->
+                    <!-- End Table with stripped rows -->
 
-					</div>
-				</div>
+                </div>
+            </div>
 
-			</div>
-		</div>
-	</section>
-
-</main><!-- End #main -->
+        </div>
+    </div>
+</section>
 @*<table class="table">
 	<thead class="thead-dark">
 		<tr>
@@ -110,3 +92,9 @@
 </table>
 
 <a asp-action="AddUser" class="btn btn-primary">添加用户</a>*@
+
+@section Scripts{
+    <script>
+
+    </script>
+                }
