--- a/ProjectManagementSystem/Views/Role/AddRole.cshtml
+++ b/ProjectManagementSystem/Views/Role/AddRole.cshtml
@@ -1,12 +1,62 @@
 ﻿@model ProjectManagementSystem.ViewModels.RoleAddViewModel
 
-@{
-    ViewBag.Title = "添加角色";
-}
+<form method="post" asp-action="AddRole">
+    <div class="col-6 offset-3">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">添加角色</h3>
+                <div class="row mb-5">
+                    <div class="col-sm-3">
+                        <label asp-for="@Model.RoleName"></label>
+                    </div>
+                    <div class="col-sm-6">
+                        <input asp-for="@Model.RoleName">
+                    </div>
+                </div>
+                @foreach (var item in Model.Infos)
+                {
+                    <div class="row mb-5">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <label>@item.AboutName</label>
+                            </div>
+                            @for (int i = 0; i < item.priorityInfos.Count; i++)
+                            {
+                                var v = item.priorityInfos[i];
+                                if (i != 0)
+                                {
+                                    <div class="col-sm-6 offset-3">
+                                        <div class="form-check form-switch">
+                                            <input asp-for="@v.IsOn" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                                            <label class="form-check-label">@v.Name</label>
+                                        </div>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="col-sm-6">
+                                        <div class="form-check form-switch">
+                                            <input asp-for="@v.IsOn" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                                            <label class="form-check-label">@v.Name</label>
+                                        </div>
+                                    </div>
+                                }
+                            }
+                        </div>
+                    </div>
+                }
 
-<h2>@ViewBag.Title</h2>
+                <button type="submit" class="btn btn-primary">提交</button>
+                <a asp-action="Index" class="btn btn-secondary">返回列表</a>
+            </div>
+        </div>
+    </div>
+</form>
 
-<form method="post">
+
+
+
+@*<form method="post">
     <div class="form-group row">
         <label asp-for="RoleName" class="col-sm-2"></label>
         <div class="col-sm-10">
@@ -29,8 +79,4 @@
             }
         }
     </div>
-
-
-    <button type="submit" class="btn btn-primary">提交</button>
-    <a asp-action="Index" class="btn btn-secondary">返回列表</a>
-</form>
+</form>*@
