--- a/ProjectManagementSystem/Views/Role/Index.cshtml
+++ b/ProjectManagementSystem/Views/Role/Index.cshtml
@@ -1,41 +1,40 @@
 ﻿@using ProjectManagementSystem.ViewModels
 @model RoleIndexViewModal
 
-@{
-	ViewBag.Title = "角色列表";
-}
-
-<h2>@ViewBag.Title</h2>
-
-<!-- Table with stripped rows -->
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th scope="col">名称</th>
-			<th scope="col">权限</th>
-			<th scope="col">操作</th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach (var role in Model.Roles)
-		{
-			<tr>
-				<td>@role.Name</td>
-				<td>@role.Priority</td>
-				<td>
-					<a asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">编辑</a>
-					<form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
-						<button type="submit" class="btn btn-danger"
-								onclick="return confirm('确认删除？')">
-							删除
-						</button>
-					</form>
-				</td>
-			</tr>
-		}
+<div class="card">
+    <div class="card-body">
+        <h3 class="card-title">角色列表</h3>
+        <!-- Table with stripped rows -->
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">名称</th>
+                    <th scope="col">权限</th>
+                    <th scope="col">操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var role in Model.Roles)
+                {
+                    <tr>
+                        <td>@role.Name</td>
+                        <td>@role.Priority</td>
+                        <td>
+                            <a asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">编辑</a>
+                            <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
+                                <button type="submit" class="btn btn-danger"
+                                        onclick="return confirm('确认删除？')">
+                                    删除
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                }
 
 
-	</tbody>
-</table>
+            </tbody>
+        </table>
 
-<a asp-action="AddRole" class="btn btn-primary">添加角色</a>
+        <a asp-action="AddRole" class="btn btn-primary">添加角色</a>
+    </div>
+</div>
