--- a/ProjectManagementSystem/Views/Role/Index.cshtml
+++ b/ProjectManagementSystem/Views/Role/Index.cshtml
@@ -5,7 +5,7 @@
     <div class="card-body">
         <h3 class="card-title">角色列表</h3>
         <!-- Table with stripped rows -->
-        <table class="table table-striped">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th scope="col">名称</th>
@@ -20,9 +20,9 @@
                         <td>@role.Name</td>
                         <td>@role.Priority</td>
                         <td>
-                            <a asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">编辑</a>
+                            <a asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-outline-primary">编辑</a>
                             <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
-                                <button type="submit" class="btn btn-danger"
+                                <button type="submit" class="btn btn-outline-danger"
                                         onclick="return confirm('确认删除？')">
                                     删除
                                 </button>
