--- a/ProjectManagementSystem/Views/User/EditUser.cshtml
+++ b/ProjectManagementSystem/Views/User/EditUser.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity;
-@model ProjectManagementSystem.ViewModels.UserEditViewModel
+@using ProjectManagementSystem.ViewModels
+@using ProjectManagementSystem.Data
+@model UserEditViewModel
 @inject RoleManager<IdentityRole> roleManager;
 @{
     ViewBag.Title = "编辑用户";
@@ -7,50 +9,65 @@
 
 <h2>@ViewBag.Title</h2>
 
-<form method="post">
-    <div class="form-group row">
-        <label asp-for="UserName" class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <input class="form-control" asp-for="UserName">
-            <span class="invalid" asp-validation-for="UserName"></span>
-        </div>
-    </div>
+<form method="post" asp-action="EditUser">
+    <div class="col-lg-6 offset-3">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">编辑用户</h5>
 
-    <div class="form-group row">
-        <label asp-for="Email" class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <input class="form-control" asp-for="Email">
-            <span class="invalid" asp-validation-for="Email"></span>
-        </div>
-    </div>
+                <!-- General Form Elements -->
+                <form>
+                    <input asp-for="Id" value="@Model.Id" hidden>
+                    <div class="form-floating mb-3">
+                        <input asp-for="TrueName" class="form-control" id="floatingInput" placeholder=" " value="@Model.TrueName">
+                        <label asp-for="TrueName"></label>
+                        <span class="invalid" asp-validation-for="TrueName"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea asp-for="About" class="form-control" placeholder="说点什么吧" style="height: 100px;" value="@Model.About"></textarea>
+                        <label asp-for="About"></label>
+                        <span class="invalid" asp-validation-for="About"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Department" class="form-control" id="floatingInput" placeholder=" " value="@Model.Department">
+                        <label asp-for="Department"></label>
+                        <span class="invalid" asp-validation-for="Department"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Job" class="form-control" id="floatingInput" placeholder=" " value="@Model.Job">
+                        <label asp-for="Job"></label>
+                        <span class="invalid" asp-validation-for="Job"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Address" class="form-control" id="floatingInput" placeholder=" " value="@Model.Address">
+                        <label asp-for="Address"></label>
+                        <span class="invalid" asp-validation-for="Address"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="JobDate" class="form-control" value="@Model.JobDate.ToString("yyyy-MM-dd")" id="floatingInput" placeholder=" ">
+                        <label asp-for="JobDate"></label>
+                        <span class="invalid" asp-validation-for="JobDate"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="BirthDate" class="form-control" value="@Model.BirthDate.ToString("yyyy-MM-dd")" id="floatingInput" placeholder=" ">
+                        <label asp-for="BirthDate"></label>
+                        <span class="invalid" asp-validation-for="BirthDate"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <select asp-for="RoleName" class="form-select" value="@Model.RoleName" aria-label="Floating label select example" placeholder=" ">
+                            @foreach (var role in roleManager.Roles.Select(a => a.Name))
+                            {
+                                <option value="@role">@role</option>
+                            }
+                        </select>
+                        <label asp-for="RoleName"></label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">保存</button>
+                    <a asp-action="Index" class="btn btn-secondary">返回列表</a>
+                </form><!-- End General Form Elements -->
 
-    <div class="form-group row">
-        <label asp-for="IdCardNo" class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <input class="form-control" asp-for="IdCardNo">
-            <span class="invalid" asp-validation-for="IdCardNo"></span>
+            </div>
         </div>
-    </div>
 
-    <div class="form-group row">
-        <label asp-for="BirthDate" class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <input class="form-control" asp-for="BirthDate">
-            <span class="invalid" asp-validation-for="BirthDate"></span>
-        </div>
     </div>
-    <div class="form-group row">
-        <label asp-for="RoleName" class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <select asp-for="RoleName" asp-items="@new SelectList(roleManager.Roles.Select(a=>a.Name))" class="form-control valid">
-            </select>
-
-            <span class="invalid" asp-validation-for="RoleName"></span>
-        </div>
-    </div>
-    <div class="invalid" asp-validation-summary="ModelOnly">
-    </div>
-
-    <button type="submit" class="btn btn-primary">提交</button>
-    <a asp-action="Index" class="btn btn-secondary">返回列表</a>
 </form>
