--- a/ProjectManagementSystem/Views/Project/Index.cshtml
+++ b/ProjectManagementSystem/Views/Project/Index.cshtml
@@ -1,40 +1,50 @@
-﻿@using ProjectManagementSystem.ViewModels
-@model ProjectIndexViewModal
+﻿@using ProjectManagementSystem.ViewModels;
+@model IEnumerable<ProjectIndexViewModal>
 
 <div class="card">
     <div class="card-body">
-        <h3 class="card-title">项目列表</h3>
-
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        <div class="d-flex align-items-center justify-content-between">
-                            <span class="label label-default me-3">Label Text</span>
-                            <div class="progress flex-grow-1" style="width: 800px;">
-                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-                                    已完成
-                                </div>
-                                <div class="progress-bar bg-subtle" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-                                    进行中
-                                </div>
-                                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-                                    已超时
-                                </div>
-                                <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-                                    待处理
+        <h2 class="card-title">项目列表</h2>
+        <div class="text-right">
+            <a asp-action="AddProject" class="btn btn-outline-primary float-end">新项目</a>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    @foreach (var project in Model)
+                    {
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <span class="label label-default me-3" style="width: 300px;">@project.Name</span>
+                                            <div class="progress" style="width: 800px;">
+                                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: @project.FinishedPercent;">
+                                                    已完成
+                                                </div>
+                                                <div class="progress-bar bg-subtle" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: @project.InProgressPercent;">
+                                                    进行中
+                                                </div>
+                                                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: @project.TimeOutPercent;">
+                                                    已超时
+                                                </div>
+                                                <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: @project.UnDealPercent;">
+                                                    待处理
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                    </div>
                                 </div>
                             </div>
+                            <!-- Add more accordion items here if needed -->
                         </div>
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
+                    }
                 </div>
             </div>
-            <!-- Add more accordion items here if needed -->
         </div>
 
 
