--- a/ProjectManagementSystem/Views/Shared/_Layout.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_Layout.cshtml
@@ -12,6 +12,79 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
 
+    <style>
+        .readonly-input {
+            background-color: #e9ecef;
+            opacity: 1;
+            cursor: not-allowed;
+        }
+    </style>
+    <style>
+        .low-risk {
+            background-color: #28a745;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .medium-risk {
+            background-color: #ffc107;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .high-risk {
+            background-color: #dc3545;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .risk-label {
+            padding: 4px 8px;
+        }
+    </style>
+    <style>
+        .gray-color {
+            background-color: #6c757d;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .risk-label {
+            padding: 4px 8px;
+        }
+    </style>
+    <style>
+        .status-awaiting {
+            background-color: #17a2b8; /* Teal */
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .status-discarded {
+            background-color: #6c757d; /* Gray */
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .status-resolved {
+            background-color: #fd7e14; /* Orange */
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .risk-label {
+            padding: 4px 8px;
+        }
+    </style>
+
+
     <!-- Favicons -->
     <link href="~/assets/img/favicon.png" rel="icon">
     <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -440,8 +513,6 @@
 
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
-
-
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
